articles delete, list

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Articles#edit</h1>
-<p>Find me in app/views/articles/edit.html.erb</p>
+<% provide(:titulo, "Edit Article") %>
+<h1>Edit existing article</h1>
+
+<%= render 'form'%>
