--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,6 @@
+<% provide(:titulo, "Home") %>
 <h1>Home</h1>
 <p>This is the home page</p>
 
+<%= link_to 'Articles', articles_path  %>
 <%= link_to 'About', welcome_about_path  %>
