--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<% provide(:titulo, "Articles") %>
+<h1>Articles</h1>
+<p>
+<%= link_to "Create new article", new_article_path %>
+</p>
+
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Description</th>
+    </tr>
+    <% @articles.each do |article| %>
+        <tr>
+            <td><%= article.title %></td>
+            <td><%= article.description %></td>
+            <td><%= link_to 'Edit', edit_article_path(article) %></td>
+            <td><%= link_to 'Show', article_path(article) %></td>
+            <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
+        </tr>
+    <% end %>
+</table>
