--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,20 +7,36 @@
     </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    
-    <p>
-        <%= f.label :description %><br/>
-        <%= f.text_area :description %>
-    </p>
-    
-    <p>
-        <%= f.submit "#{@boton} articulo" %>
-    </p>
-<% end %>
+<div class="row">
+    <div class='col-xs-12'>
+        <%= form_for @article do |f| %>
+          <div class="form-group row">
+            <div class="col-sm-2 col-form-label">
+                <label for="title">Title</label>
+            </div>
+            <div class="col-sm-8 col-form-label">
+                <%= f.text_field :title, class:"form-control", id:"title", placeholder:"Title of article", autofocus: true  %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-2 col-form-label">
+                <label for="description">Description</label>
+            </div>
+            <div class="col-sm-8 col-form-label">
+                <%= f.text_area :description, rows: 8, class:"form-control", id:"description", placeholder:"Description of article", autofocus: true  %>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                  <%= f.submit "#{@boton} article", class:"btn btn-primary" %>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <%= link_to "Cancel request and return to articles listing", articles_path %>
+            </div>
+          </div>
+        <% end %>
+    </div>
+</div>
 
-<%= link_to "Back to articles listing", articles_path %>
