--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:titulo, "Edit Article") %>
-<h1 align="center">Edit existing article</h1>
+<% provide(:titulo, "Edit course") %>
+<h1 align="center">Edit existing course</h1>
 
 <%= render 'form'%>
