--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:titulo, "New Article") %>
-<h1 align="center">Create an article</h1>
+<% provide(:titulo, "New course") %>
+<h1 align="center">Create a course</h1>
 
 <%= render 'form'%>
