--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,17 @@
 <% provide(:titulo, "Articles") %>
-<h1>Articles</h1>
-<p>
-<%= link_to "Create new article", new_article_path %>
-</p>
+<h1 align='center'>Courses</h1>
 
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
-    <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.description %></td>
-            <td><%= link_to 'Edit', edit_article_path(article) %></td>
-            <td><%= link_to 'Show', article_path(article) %></td>
-            <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
-        </tr>
-    <% end %>
-</table>
+<% @articles.each do |course| %>
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+            <div class="well well-lg">
+                <div class="article-title">
+                    <%= link_to course.title, article_path(course)  %>
+                </div>
+                <div class="article-body">
+                    <%= truncate(course.description, lenght: 100) %>
+                </div>
+            </div>
+        </div>
+    </div>
+<% end %>
