--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,17 @@
-<% provide(:titulo, "Show Article") %>
-<h1>Showing selected article</h1>
+<h2 align='center'> Title: <%= @article.title %></h2>
+<div class="well col-xs-8 col-offset-2">
+    <div class="title-label">
+        <h4><strong>Description: </strong></h4>
+    </div>
+    <hr>
+    <%= simple_format(@article.description) %>
+    <div class="article-actions">
+        <%= link_to "Edit this course", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
+        <%= link_to "Delete this course", article_path(@article), method: :delete, 
+                data: { confirm: "Are you sure you want to delete the course?"},
+                class: "btn btn-xs btn-danger" %>
+        <br>
+        <%= link_to "View all courses", articles_path, class:"btn btn-primary btn-xs" %>
+    </div>
+</div>
 
-<p>
-    Title: <%= @article.title %>
-</p>
-
-<p>
-    Description: <%= @article.description %>
-</p>
-
-<%= link_to "Edit this article", edit_article_path(@article) %> |
-<%= link_to "Back to articles listing", articles_path %>
