--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -13,16 +13,12 @@
             <p>If you would like to know more about me, you can contact me</p>
             <hr>
             <div style="display:'flex' flex-wrap:'rows'">
-                <div class="article-actions col-xs-10">
-                    <%= link_to "Education", welcome_cv_path, class: "btn btn-primary btn-xs" %>
-                    <%= link_to "Courses", articles_path, class:"btn btn-primary btn-xs" %>
-                    <%= link_to "Projects", welcome_cv_path, class:"btn btn-primary btn-xs" %>
-                    <br>
-                    <%= link_to "Computer skills", welcome_cv_path, class:"btn btn-primary btn-xs" %>
-                </div>
                 <div class="center">
-                    <a href="https://es.linkedin.com/in/monica-zumarraga-389521101">
-                        <img src="/assets/linkedin.png", class="image-link"/>
+                    <a href="https://www.facebook.com/monica.zumarraga.1">
+                        <img src="/assets/fb.png", class="image-link"/>
+                    </a>
+                    <a href="https://www.instagram.com/monizumarraga/">
+                        <img src="/assets/instagram.png", class="image-link"/>
                     </a>
                 </div>
             </div>
