--- a/app/views/welcome/cv.html.erb
+++ b/app/views/welcome/cv.html.erb
@@ -15,18 +15,18 @@
             <hr>
             <div style="display:'flex' flex-wrap:'rows'">
                 <div class="article-actions col-xs-8">
-                    <%= link_to "Education", welcome_cv_path, class: "btn btn-primary btn-xs" %>
+                    <%= link_to "Education", articles_path, class: "btn btn-primary btn-xs" %>
                     <%= link_to "Courses", articles_path, class:"btn btn-primary btn-xs" %>
-                    <%= link_to "Projects", welcome_cv_path, class:"btn btn-primary btn-xs" %>
+                    <%= link_to "Projects", articles_path, class:"btn btn-primary btn-xs" %>
                     <br>
                     <%= link_to "Computer skills", welcome_cv_path, class:"btn btn-primary btn-xs" %>
                 </div>
                 <div class="center col-xs-4">
                     <a href="https://es.linkedin.com/in/monica-zumarraga-389521101">
-                        <img src="/assets/linkedin.png", class="image-link"/>
+                        <img src="/assets/linkedin.png", alt="linkedin", class="image-link"/>
                     </a>
                     <a href="https://github.com/monizumarraga">
-                        <img src="/assets/github.png", class="image-link"/>
+                        <img src="/assets/github.png", alt="github", class="image-link"/>
                     </a>
                 </div>
             </div>
