--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -5,6 +5,15 @@
         <%= form_for @article do |f| %>
           <div class="form-group row">
             <div class="col-sm-2 col-form-label">
+                <label for="category">Category select</label>
+            </div>
+            <div class="col-sm-8 col-form-label">
+                <% array = ['Education', 'Project', 'Course', 'Computer skill'] %>
+                <%= f.select :category, options_for_select(array, @article.category), placeholder:"Category of article" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-sm-2 col-form-label">
                 <label for="title">Title</label>
             </div>
             <div class="col-sm-8 col-form-label">
