--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -15,10 +15,10 @@
             <div style="display:'flex' flex-wrap:'rows'">
                 <div class="center">
                     <a href="https://www.facebook.com/monica.zumarraga.1">
-                        <img src="/assets/fb.png", class="image-link"/>
+                        <img src="/assets/fb.png", alt="fb", class="image-link"/>
                     </a>
                     <a href="https://www.instagram.com/monizumarraga/">
-                        <img src="/assets/instagram.png", class="image-link"/>
+                        <img src="/assets/instagram.png", alt="instagram", class="image-link"/>
                     </a>
                 </div>
             </div>
