--- a/app/views/welcome/cv.html.erb
+++ b/app/views/welcome/cv.html.erb
@@ -15,11 +15,11 @@
             <hr>
             <div style="display:'flex' flex-wrap:'rows'">
                 <div class="article-actions col-xs-8">
-                    <%= link_to "Education", articles_path, class: "btn btn-primary btn-xs" %>
-                    <%= link_to "Courses", articles_path, class:"btn btn-primary btn-xs" %>
-                    <%= link_to "Projects", articles_path, class:"btn btn-primary btn-xs" %>
+                    <%= link_to "Education", articles_education_path, class: "btn btn-primary btn-xs" %>
+                    <%= link_to "Courses", articles_course_path, class:"btn btn-primary btn-xs" %>
+                    <%= link_to "Projects", articles_project_path, class:"btn btn-primary btn-xs" %>
                     <br>
-                    <%= link_to "Computer skills", welcome_cv_path, class:"btn btn-primary btn-xs" %>
+                    <%= link_to "Computer skills", articles_computer_path, class:"btn btn-primary btn-xs" %>
                 </div>
                 <div class="center col-xs-4">
                     <a href="https://es.linkedin.com/in/monica-zumarraga-389521101">
