--- a/app/views/articles/computer.html.erb
+++ b/app/views/articles/computer.html.erb
@@ -1,4 +1,5 @@
-<% provide(:titulo, "Articles") %>
+<% provide(:titulo, "Computer skills") %>
+<h1 align='center'>Computer skills</h1>
 
 <h1 align="center">Listing all articles</h1>
 <div align="center">
