--- a/app/views/articles/project.html.erb
+++ b/app/views/articles/project.html.erb
@@ -1,4 +1,5 @@
-<% provide(:titulo, "Articles") %>
+<% provide(:titulo, "Projects") %>
+<h1 align='center'>Projects</h1>
 
 <h1 align="center">Listing all articles</h1>
 <div align="center">
