--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,11 @@
     </div>
     <hr>
     <%= simple_format(@article.description) %>
+    <div class="title-label">
+        <h4><strong>Date: </strong></h4>
+    </div>
+    <hr>
+    <%= simple_format(@article.date) %>
     <div class="article-actions">
         <%= link_to "Edit this course", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
         <%= link_to "Delete this course", article_path(@article), method: :delete, 
