--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,7 +1,7 @@
 <% obj.each do |course| %>
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
-            <div class="well well-lg">
+            <div class="well-lg article">
                 <div class="article-title">
                     <%= link_to course.title, article_path(course)  %>
                 </div>
