--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,11 +11,13 @@
     <hr>
     <%= simple_format(@article.date) %>
     <div class="article-actions">
-        <%= link_to "Edit this course", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
-        <%= link_to "Delete this course", article_path(@article), method: :delete, 
-                data: { confirm: "Are you sure you want to delete the course?"},
-                class: "btn btn-xs btn-danger" %>
-        <br>
+        <% if logged_in? && current_user == @article.user %>
+            <%= link_to "Edit this course", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
+            <%= link_to "Delete this course", article_path(@article), method: :delete, 
+                    data: { confirm: "Are you sure you want to delete the course?"},
+                    class: "btn btn-xs btn-danger" %>
+            <br>
+        <% end %>
         <%= link_to "View all courses", articles_path, class:"btn btn-primary btn-xs" %>
     </div>
 </div>
