--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,29 +1,38 @@
 <nav class="footer navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="footer navbar-nav mr-100">
-      <li class="nav-item">
-        <%= link_to "Users", new_user_path, class:"footer-link"%>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="footer-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Articles
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <%= link_to "New Course", new_article_path, class:"dropdown-item"%>
-          <div class="dropdown-divider"></div>
-          <%= link_to "Articles List", articles_path, class:"dropdown-item"%>
-        </div>
-      </li>
       <% if logged_in? %>
           <li class="nav-item navbar-right">
             <%= link_to 'Log out', logout_path, method: :delete, class:"footer-link" %>
           </li>
+          <div class="dropup navbar-right">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              User Profile
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+              <%= link_to "Edit your profile", edit_user_path(current_user), class:"dropdown-item"%>
+              <div class="divider"></div>  
+              <%= link_to "View your profile", user_path(current_user), class:"dropdown-item"%>
+            </ul>
+          </div>
+          <div class="dropup navbar-right">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              User articles
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+              <%= link_to "Articles List", user_path(current_user), class:"dropdown-item"%>
+              <div class="divider"></div>
+              <%= link_to "New Course", new_article_path, class:"dropdown-item"%>
+            </ul>
+          </div>
       <% else %>
           <li class="nav-item navbar-right">
-            <%= link_to 'Log in', login_path, class:"footer-link" %>
+            <%= link_to 'Sign up', new_user_path, class:"footer-link" %>
           </li>
           <li class="nav-item navbar-right">
-            <%= link_to 'Sign up', new_user_path, class:"footer-link" %>
+            <%= link_to 'Log in', login_path, class:"footer-link" %>
           </li>
       <% end %>
     </ul>
