--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 <% @users.each do |user| %>
     <div class="row">
         <div class="col-xs-8 col-xs-offset-2">
-            <div class="well well-lg">
+            <div class="well-lg article">
                 <div class="article-title">
                     <%= link_to user.username, user_path(user)  %>
                 </div>
