--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
         <%= yield %>
       </div>
       <%= render 'layouts/footer' %>
-      <%= debug(@num_user) if Rails.env.development? %>
-      <%= debug(@selected_user) if Rails.env.development? %>
+      <%= debug(@detail) if Rails.env.development? %>
       <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
