--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,13 +5,22 @@
     </div>
     <hr>
     <%= simple_format(@article.description) %>
+    <br>
+    <% if @article.categories.any? %>
+        <div class="title-label">
+            <h4><strong>Categories: </strong></h4>
+        </div>
+        <hr>
+        <%= render @article.categories %>
+    <% end %>
+    <br>
     <div class="title-label">
         <h4><strong>Date: </strong></h4>
     </div>
     <hr>
     <%= simple_format(@article.date) %>
     <div class="article-actions">
-        <% if logged_in? && current_user == @article.user %>
+        <% if logged_in? && (current_user == @article.user || current_user.admin? )%>
             <%= link_to "Edit this course", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
             <%= link_to "Delete this course", article_path(@article), method: :delete, 
                     data: { confirm: "Are you sure you want to delete the course?"},
