--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,17 @@
-<nav class="footer navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="footer navbar-nav mr-100">
+<nav class="navbar footer navbar-expand-lg navbar-light bg-light">
+  <div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContentfooter" aria-controls="navbarSupportedContentfooter" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContentfooter">
+    <ul class="footer navbar-nav mr-auto">
       <% if logged_in? %>
           <li class="nav-item navbar-right">
             <%= link_to 'Log out', logout_path, method: :delete, class:"footer-link" %>
           </li>
           <div class="dropup navbar-right">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              User Profile
+              User Profile <%= "Admin" if current_user.admin? %>
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
@@ -18,6 +22,12 @@
               <%= link_to "New Course", new_article_path, class:"dropdown-item"%>
               <div class="divider"></div>
               <%= link_to "New details", new_detail_path, class:"dropdown-item"%>
+              <% if logged_in? and current_user.admin? %>
+                <div class="divider"></div>
+                <%= link_to "View Categories", categories_path, class:"dropdown-item" %>
+                <div class="divider"></div>
+                <%= link_to "Create New Category", new_category_path, class:"dropdown-item" %>
+              <% end %>
             </ul>
           </div>
       <% else %>
@@ -29,5 +39,6 @@
           </li>
       <% end %>
     </ul>
+  </div>
   </div>
 </nav>
