--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,11 @@
                     <%= truncate(user.email, lenght: 100) %>
                 </div>
             </div>
+            <% if logged_in? &&  current_user.admin? %>
+                <%= link_to "Delete this course", user_path(user), method: :delete, 
+                        data: { confirm: "Are you sure you want to delete the user and all therir articles and details?"},
+                        class: "btn btn-xs btn-danger" %>
+            <% end %>
         </div>
     </div>
 <% end %>
