--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,13 +1,3 @@
 <% provide(:titulo, "My Blog") %>
 
-<div class="row">
-    <div class="jumbotron home col-xs-8 col-offset-2">
-        <div class='col-xs-8 home-logo'>
-        </div>
-        <div class='col-xs-12 center'>
-          <h1 class="display-4">Welcome!</h1>
-          <p>In this website I share some of my hobbies and personal CV.</p>
-          <p>I hope you'll like it!.</p>
-        </div>
-    </div>
-</div>
+<%= render 'details/welcome', obj: current_user.detail %>
