bloqueo paginas iniciales

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,6 +67,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center; 
+    margin:15px;
 }
 
 .home {
@@ -80,6 +81,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: top center; 
+    margin:15px;
 }
 
 .cv {
@@ -116,6 +118,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: top center; 
+    margin:15px;
 }
 
 .well {
