--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
     <h2 align='center'> Profile</h2>
 <% end %>
 
+<div class="row well">
 <div class="well-lg user_top">
     <% Category.all.each do |category| %>
         <div class="well-lg article_top">
@@ -26,5 +27,6 @@
             <hr>
         </div>
     <% end %>
+</div>
 </div>
     
