--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,12 +6,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "About me", welcome_about_path, class:"nav-link"%>
-      </li>
-      <li class="nav-item">
-        <%= link_to "CV", welcome_cv_path, class:"nav-link"%>
-      </li>
+      <%if current_user %>
+        <li class="nav-item">
+          <%= link_to "About me", welcome_about_path, class:"nav-link"%>
+        </li>
+        <li class="nav-item">
+          <%= link_to "CV", welcome_cv_path, class:"nav-link"%>
+        </li>
+      <%end%>
       <li class="nav-item">
         <%= link_to "Users", users_path, class:"nav-link"%>
       </li>
