--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,17 @@
 <% provide(:titulo, "My Blog") %>
 
+
+<%if current_user %>
 <%= render 'details/welcome', obj: current_user.detail %>
+<%else %>
+    <div class="row">
+        <div class="jumbotron home col-xs-8 col-offset-2">
+            <div class='col-xs-8 home-logo'>
+            </div>
+            <div class='col-xs-12 center'>
+              <h1 class="display-4">Welcome!</h1>
+              <p>Welcome to this page, log in, sign up or check other users CV! </p>
+            </div>
+        </div>
+    </div>
+<%end %>
