--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,20 @@
 <% provide(:titulo, "Articles") %>
 
-<h1 align="center">Listing all articles</h1>
-<div align="center">
-    <%= will_paginate %>
-</div>
-<%= render 'article', obj: @articles %>
-<div align="center">
-    <%= will_paginate %>
+<div class='row'>
+    <div class="well cv col-xs-8 col-offset-2">
+        <div class='col-xs-12'>
+            <h1 align='center'>Listing all articles</h1>
+            <%= form_tag articles_path, :method => 'get', :id => "articles_search" do %>
+              <div class="col-xs-8 col-xs-offset-2">
+                  <div class="well-lg article">
+                    <div class="center">
+                      <%= text_field_tag :search, params[:search] %>
+                      <%= submit_tag "Search", :name => nil %>
+                    </div>
+                </div>
+            </div>
+            <div id="article"><%= render 'listarticle', obj: @articles %></div>
+          <% end %>
+        </div>
+    </div>
 </div>
