--- a/app/views/details/_about.html.erb
+++ b/app/views/details/_about.html.erb
@@ -10,12 +10,16 @@
             <hr>
             <div style="display:'flex' flex-wrap:'rows'">
                 <div class="center ">
-                    <a href="<%= obj.fb %>">
-                        <img src="/assets/fb.png", alt="fb", class="image-link"/>
-                    </a>
-                    <a href="<%= obj.instagram %>">
-                        <img src="/assets/instagram.png", alt="instagram", class="image-link"/>
-                    </a>
+                    <% if obj.fb != '' %>
+                        <a href="<%= obj.fb %>">
+                            <img src="/assets/fb.png", alt="fb", class="image-link"/>
+                        </a>
+                    <% end %>
+                    <% if obj.instagram != '' %>
+                        <a href="<%= obj.instagram %>">
+                            <img src="/assets/instagram.png", alt="instagram", class="image-link"/>
+                        </a>
+                    <% end %>
                 </div>
             </div>
         </div>
