--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,20 @@
 <% provide(:titulo, "Users") %>
-<h1 align='center'>Users</h1>
 
-<div align="center">
-<%= will_paginate %>
-<% @users.each do |user| %>
-    <div class="row">
-        <div class="col-xs-8 col-xs-offset-2">
-            <div class="well-lg article">
-                <div class="article-title">
-                    <%= link_to user.username, user_path(user)  %>
-                </div>
-                <div class="article-body">
-                    <%= truncate(user.email, lenght: 100) %>
+<div class='row'>
+    <div class="well cv col-xs-8 col-offset-2">
+        <div class='col-xs-12'>
+            <h1 align='center'>Users</h1>
+            <%= form_tag users_path, :method => 'get', :id => "users_search" do %>
+              <div class="col-xs-8 col-xs-offset-2">
+                  <div class="well-lg article">
+                    <div class="center">
+                      <%= text_field_tag :search, params[:search] %>
+                      <%= submit_tag "Search", :name => nil %>
+                    </div>
                 </div>
             </div>
-            <% if logged_in? &&  current_user.admin? %>
-                <%= link_to "Delete this course", user_path(user), method: :delete, 
-                        data: { confirm: "Are you sure you want to delete the user and all therir articles and details?"},
-                        class: "btn btn-xs btn-danger" %>
-            <% end %>
+            <div id="users"><%= render 'list', obj: @users%></div>
+          <% end %>
         </div>
     </div>
-<% end %>
-<%= will_paginate %>
 </div>
