--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,9 +51,13 @@ body{
 .jumbotron{
     background-color: #d4cbc4;
     height: auto;
-    min-height: -webkit-fill-available;
     color: #fff;
     background-position: 2% center; 
+}
+
+.profile_image{
+    height: auto;
+    width:auto;
 }
 
 .image-home{
@@ -61,6 +65,8 @@ body{
     max-width: 30%;
     height: auto;
 }
+
+
 
 .home-logo {
     background-image: asset-url('me.png');
@@ -199,6 +205,7 @@ body{
     border-color: #b0a6a1;
 }
 
+
 .btn-primary:hover{
     background-color: #58514c;
     border-color: #58514c;
@@ -213,4 +220,21 @@ body{
     background-color: #58514c;
     border-color: #58514c;
     color: #fff;
+}
+
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
 }
