--- a/app/views/details/_welcome.html.erb
+++ b/app/views/details/_welcome.html.erb
@@ -1,10 +1,13 @@
 <div class="row">
     <div class="jumbotron home col-xs-8 col-offset-2">
-        <div class='col-xs-8 home-logo'>
+        <div class='col-xs-8'>
+            <% if obj.image %>
+               <%= image_tag(obj.image.picture.url, width: "auto", height: "300") if obj.image.picture? %>
+            <% end %>
         </div>
         <div class='col-xs-12 center'>
           <h1 class="display-4">Welcome!</h1>
-          <%= obj.welcome %>
+          <%= obj.detail.welcome %>
         </div>
     </div>
 </div>
