--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,6 +17,12 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
               <%= link_to "View your profile", user_path(current_user), class:"dropdown-item"%>
               <div class="divider"></div>  
+              <%if current_user.image %>
+                <%= link_to "Edit your profile image", edit_image_path(current_user.image), class:"dropdown-item"%>
+              <% else %>
+                <%= link_to "Edit your profile image", new_image_path, class:"dropdown-item"%>
+              <% end %>
+              <div class="divider"></div>  
               <%= link_to "Edit your profile", edit_user_path(current_user), class:"dropdown-item"%>
               <div class="divider"></div>
               <%= link_to "New Course", new_article_path, class:"dropdown-item"%>
