--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,12 +1,10 @@
 <% provide(:titulo, "My Blog") %>
 
 
-<%if current_user %>
-<%= render 'details/welcome', obj: current_user.detail %>
-<%else %>
+
     <div class="row">
         <div class="jumbotron home col-xs-8 col-offset-2">
-            <div class='col-xs-8 home-logo'>
+            <div class='col-xs-8'>
             </div>
             <div class='col-xs-12 center'>
               <h1 class="display-4">Welcome!</h1>
@@ -14,4 +12,3 @@
             </div>
         </div>
     </div>
-<%end %>
